# ChangeLog for media-libs/libemf
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libemf/ChangeLog,v 1.1 2003/07/17 10:33:47 phosphan Exp $

*libemf-1.0 (17 Jul 2003)

  17 Jul 2003; Patrick Kursawe <phosphan@gentoo.org> libemf-1.0.ebuild,
  metadata.xml, files/libEMF-1.0-gcc3.patch:
  Initial import, used by chemtool-1.6 - patch for gcc3 by Stanislav Brabec
  <sbrabec@users.sourceforge.net>
