@@ -1,5 +1,5 @@
+MD5 b964db22d64bddd5bbe95ffc5769eb5d ChangeLog 760
 MD5 7375f0919e573bf263408129fb291483 ladcca-0.3.1.ebuild 619
-MD5 295a0c0a2377d44c01acd5257dd7937e ChangeLog 674
-MD5 f0460ab68b13d00dcf4c08b41d6b25fa ladcca-0.3.2.ebuild 615
-MD5 77d4381b90cb0fe0444d1719764e76d4 files/digest-ladcca-0.3.2 64
+MD5 3f3806bcfde5129b8f153a34a9a4e019 ladcca-0.3.2.ebuild 622
 MD5 8af1f3fdb94529f7f7ae554bde0b08d9 files/digest-ladcca-0.3.1 64
+MD5 77d4381b90cb0fe0444d1719764e76d4 files/digest-ladcca-0.3.2 64
