@@ -1,5 +1,5 @@
-MD5 94b86af45e43fbaf885dac66dd51cff4 libemf-1.0.ebuild 791
-MD5 8dbedbbac544b57f0b644399afeb1c68 ChangeLog 473
+MD5 289de920d59b83e46f8ec732e37d3ac1 ChangeLog 573
+MD5 c9de34909ee8bd0004a47b119b7ff10f libemf-1.0.ebuild 799
 MD5 b742040acaeddc3798a21739bd59e8aa metadata.xml 224
-MD5 3b1d4fe080501e571622229464654b95 files/libEMF-1.0-gcc3.patch 2429
 MD5 5dd26ee62faddde9ae039b314d8e0850 files/digest-libemf-1.0 62
+MD5 3b1d4fe080501e571622229464654b95 files/libEMF-1.0-gcc3.patch 2429
